--- a/modules/enterprise/gui/portal-war/src/main/webapp/css/win.css
+++ b/modules/enterprise/gui/portal-war/src/main/webapp/css/win.css
@@ -1910,7 +1910,7 @@ ul.radio-group .unspecified {
 }
 
 .property-map-summary-table {
-	width: 100%;
+	width: 95%;
     margin:4px 0px 6px 6px;
     border: 2px solid #DDD;
     border-collapse: collapse;
